packages/svelte/tests/compiler-errors/samples/runes-no-const-assignment/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'invalid_assignment',
		message: 'Cannot assign to constant'
	}
});
